PREP-66 fixed logo alignment

--- a/app/components/mainContainer/style-mainContainer.scss
+++ b/app/components/mainContainer/style-mainContainer.scss
@@ -21,7 +21,6 @@ body {
       width: 100%;
       height: 81px;
       max-width: 960px;
-      padding-right: 14px;
       box-sizing: border-box;
       display: flex;
       justify-content: space-between;
@@ -30,7 +29,6 @@ body {
       .participationLogo {
         width: 140px;
         cursor: pointer;
-        margin-bottom: 9px;
       }
 
       .crossrefLogo {
